[package]
name = "opensea_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.99"
serde = { version = "1.0.164", features = ["derive"] }
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["postgres","numeric","r2d2","chrono"] }
dotenvy = "0.15"
ethers = { version = "2.0", features = ["rustls"] }
dotenv = "0.15.0"
moka = { version = "0.11", features = ["future"] }
random_color = "0.6.1"

